Fix KoZoomTool on rotated and mirrored canvas

KoCanvasControllerWidget uses widget coordinates, not the view ones.

BUG:386704